gas/config/tc-ia64.h
@@ -325,5 +325,5 @@ typedef struct unwind_record
 
 /* VMS backtraces expect dwarf version 3.  */
 #ifdef TE_VMS
-#define DWARF2_VERSION      (dwarf_level < 3 ? 3  : debug_level)
+#define DWARF2_VERSION      (dwarf_level < 3 ? 3  : dwarf_level)
 #endif
