gas/testsuite/gas/elf/dwarf-5-file0.d
@@ -1,0 +1,6 @@
+#as: --gdwarf-5
+#name: DWARF5 .line 0
+#readelf: -wl
+
+#pass
+
