gas/testsuite/gas/elf/dwarf-5-file0.s
@@ -1,0 +1,18 @@
+	.text
+
+.file 0
+.line 1
+	.long 3
+
+.file 1 "asdf"
+.line 2
+	.long 5
+
+.file 0
+.line 4
+	.long 3
+
+.file 2 "def"
+.line 5
+	.long 3
+
